company + report changes
